<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:tag="isVisible">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            android:tag="@string/key_image" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="@string/key_title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="@string/key_genre" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="@string/key_date" />

    </LinearLayout>

</android.support.v7.widget.CardView>
